<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="Panel logowania"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/back_id"
        android:scaleType="centerInside"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="90dp"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_coinllet"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="Email"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEmail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/podaj_imie"
        app:layout_constraintBottom_toBottomOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailText"
        app:layout_constraintTop_toTopOf="@+id/emailText" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Hasło"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        app:layout_constraintTop_toTopOf="@+id/passwordText"
        app:layout_constraintBottom_toBottomOf="@+id/passwordText"
        app:layout_constraintStart_toEndOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btnConfirmLogin"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#C3A922"
        android:text="Zaloguj się"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/btnFingerprint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />

    <ImageButton
        android:id="@+id/btnFingerprint"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="8dp"
        android:background="@null"
        android:contentDescription="@string/finger_id"
        android:scaleType="centerInside"
        android:src="@drawable/finger"
        app:layout_constraintBottom_toBottomOf="@+id/btnConfirmLogin"
        app:layout_constraintEnd_toStartOf="@+id/btnFace"
        app:layout_constraintStart_toEndOf="@+id/btnConfirmLogin"
        app:layout_constraintTop_toTopOf="@+id/btnConfirmLogin"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnFace"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:background="@null"
        android:contentDescription="@string/face_id"
        android:scaleType="centerInside"
        android:src="@drawable/face"
        app:layout_constraintBottom_toBottomOf="@+id/btnFingerprint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFingerprint"
        app:layout_constraintTop_toTopOf="@+id/btnFingerprint"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
